Categories added, old posts added and some changes.

--- a/netlify.toml
+++ b/netlify.toml
@@ -18,6 +18,16 @@
   cache-control = "max-age=0,no-cache,no-store,must-revalidate"
 
 [[redirects]]
+  from = "https://www.jeroenvanwissen.com"
+  to = "https://jeroenvanwissen.nl"
+  status = 301
+  force = true
+[[redirects]]
+  from = "https://www.jeroenvanwissen.com"
+  to = "https://jeroenvanwissen.nl"
+  status = 301
+  force = true
+[[redirects]]
   from = "https://www.jeroenvanwissen.com/*"
   to = "https://jeroenvanwissen.nl/:splat"
   status = 301
@@ -28,13 +38,8 @@
   status = 301
   force = true
 [[redirects]]
-  from = "https://www.jeroenvanwissen.com"
-  to = "https://jeroenvanwissen.nl"
-  status = 301
-  force = true
-[[redirects]]
-  from = "https://www.jeroenvanwissen.com"
-  to = "https://jeroenvanwissen.nl"
+  from = "/post/categories-pages-added"
+  to = "/blog/category-pages-added"
   status = 301
   force = true
 [[redirects]]
