--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
+    "dev": "npx tinacms dev -c 'astro dev'",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview"
@@ -15,7 +15,9 @@
   "dependencies": {
     "@astrojs/netlify": "^2.1.2",
     "@astrojs/tailwind": "^3.0.1",
+    "@tinacms/cli": "^1.2.2",
     "cypress": "^12.6.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "tinacms": "^1.2.2"
   }
 }
