--- a/netlify.toml
+++ b/netlify.toml
@@ -22,6 +22,11 @@
   cache-control = "max-age=0,no-cache,no-store,must-revalidate"
 
 [[redirects]]
+  from = "/post/categories-pages-added"
+  to = "/blog/category-pages-added"
+  status = 301
+  force = true
+[[redirects]]
   from = "/blog/categories-pages-added"
   to = "/blog/category-pages-added"
   status = 301
