--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^2.0.16",
-    "prettier-plugin-astro": "^0.8.0"
+    "astro": "^2.1.2",
+    "prettier": "^2.8.4",
+    "prettier-plugin-astro": "^0.8.0",
+    "prettier-plugin-tailwindcss": "^0.2.4"
   },
   "dependencies": {
-    "@astrojs/netlify": "^2.1.3",
-    "@astrojs/tailwind": "^3.0.1",
-    "@tinacms/cli": "^1.2.2",
+    "@astrojs/netlify": "^2.2.0",
+    "@astrojs/tailwind": "^3.1.0",
+    "@tinacms/cli": "^1.3.1",
     "tailwindcss": "^3.2.7",
-    "tinacms": "^1.2.2"
+    "tinacms": "^1.3.0"
   }
 }
