--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         // Enable top-level await, and other modern ESM features.
-        "target": "ESNext",
-        "module": "ESNext",
+        "target": "ES6",
+        "module": "CommonJS",
         // Enable node-style module resolution, for things like npm package imports.
         "moduleResolution": "node",
         // Enable JSON imports.
