--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,6 @@
-# build output
-dist/
-.output/
-
-# dependencies
-node_modules/
-
-# logs
+dist
+.output
+node_modules
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-
-# environment variables
-.env
-.env.production
-
-# macOS-specific files
 .DS_Store
-
-# Local Netlify folder
-.netlify
-cypress/videos
 .astro
