--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@example/basics",
-  "version": "0.0.1",
+  "name": "@jeroenvanwissen/jeroenvanwissen_nl",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "npx tinacms dev -c 'astro dev'",
@@ -9,13 +9,12 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^2.1.3",
-    "prettier": "^2.8.4",
+    "astro": "^2.1.4",
+    "prettier": "^2.8.6",
     "prettier-plugin-astro": "^0.8.0",
     "prettier-plugin-tailwindcss": "^0.2.5"
   },
   "dependencies": {
-    "@astrojs/netlify": "^2.2.0",
     "@astrojs/tailwind": "^3.1.1",
     "@tinacms/cli": "^1.3.3",
     "tailwindcss": "^3.2.7",
