--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jeroenvanwissen/jeroenvanwissen_nl",
+  "name": "@jeroenvanwissen/jeroenvanwissen.nl",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,15 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^3.5.4",
+    "astro": "^3.6.1",
     "prettier": "^3.1.0",
     "prettier-plugin-astro": "^0.12.2",
     "prettier-plugin-tailwindcss": "^0.5.7"
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.0.2",
-    "@tinacms/cli": "^1.5.31",
+    "@tinacms/cli": "^1.5.37",
     "tailwindcss": "^3.3.5",
-    "tinacms": "^1.5.22"
+    "tinacms": "^1.5.27"
   }
 }
