--- a/package.json
+++ b/package.json
@@ -3,21 +3,19 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "npx tinacms dev -c 'astro dev'",
+    "dev": "astro dev",
     "start": "astro dev",
-    "build": "npx tinacms build && astro build",
+    "build": "astro build",
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^4.2.0",
-    "prettier": "^3.2.4",
-    "prettier-plugin-astro": "^0.12.3",
+    "astro": "^4.4.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.11"
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
-    "@tinacms/cli": "^1.5.39",
-    "tailwindcss": "^3.4.1",
-    "tinacms": "^1.5.28"
+    "tailwindcss": "^3.4.1"
   }
 }
