--- a/conf/default.conf
+++ b/conf/default.conf
@@ -40,3 +40,13 @@ server {
       try_files $uri $uri/index.html $uri.html =404;
     }
 }
+
+server {
+  listen 80;
+  server_name localhost;
+  location = /health {
+    access_log off;
+    add_header 'Content-Type' 'application/json';
+    return 200 '{"status":"UP"}';
+  }
+}
