--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,11 +7,8 @@ name: Docker
 
 on:
   push:
-    branches: [ "latest" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: [ "latest" ]
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -66,6 +63,9 @@ jobs:
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            # set latest tag for default branch
+            type=raw,value=latest,enable={{is_default_branch}}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
@@ -85,12 +85,12 @@ jobs:
       # repository is public to avoid leaking data.  If you would like to publish
       # transparency data even for private images, pass --force to cosign below.
       # https://github.com/sigstore/cosign
-      ##- name: Sign the published Docker image
-      ##  if: ${{ github.event_name != 'pull_request' }}
-      ##  env:
-      ##    # https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-an-intermediate-environment-variable
-      ##    TAGS: ${{ steps.meta.outputs.tags }}
-      ##    DIGEST: ${{ steps.build-and-push.outputs.digest }}
-      ##  # This step uses the identity token to provision an ephemeral certificate
-      ##  # against the sigstore community Fulcio instance.
-      ##  run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
+    #   - name: Sign the published Docker image
+    #     if: ${{ github.event_name != 'pull_request' }}
+    #     env:
+    #       # https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-an-intermediate-environment-variable
+    #       TAGS: ${{ steps.meta.outputs.tags }}
+    #       DIGEST: ${{ steps.build-and-push.outputs.digest }}
+    #     # This step uses the identity token to provision an ephemeral certificate
+    #     # against the sigstore community Fulcio instance.
+    #     run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
