--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,15 +43,18 @@ jobs:
                   NEW_PATCH=$((PATCH + 1))
                   NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
                   
-                  # Update package.json with new version
+                  # Update package.json and package-lock.json with new version
                   npm version $NEW_VERSION --no-git-tag-version
+                  
+                  # Install dependencies to update package-lock.json
+                  npm install
                   
                   # Configure git
                   git config --local user.email "github-actions[bot]@users.noreply.github.com"
                   git config --local user.name "github-actions[bot]"
                   
                   # Commit and push changes
-                  git add package.json
+                  git add package.json package-lock.json
                   git commit -m "chore: bump version to $NEW_VERSION [skip ci]"
                   git push
                   
