--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
               uses: actions/checkout@v4
               with:
                 fetch-depth: 0
+                token: ${{ secrets.DEPLOY_KEY }}
 
             - name: Setup Node.js
               uses: actions/setup-node@v4
@@ -26,6 +27,10 @@ jobs:
 
             - name: Check version and create release
               run: |
+                # Configure git
+                git config --global user.email "github-actions[bot]@users.noreply.github.com"
+                git config --global user.name "github-actions[bot]"
+                
                 # Get current version from package.json
                 CURRENT_VERSION=$(node -p "require('./package.json').version")
                 echo "Current version: $CURRENT_VERSION"
@@ -48,10 +53,6 @@ jobs:
                   
                   # Install dependencies to update package-lock.json
                   npm install
-                  
-                  # Configure git
-                  git config --local user.email "github-actions[bot]@users.noreply.github.com"
-                  git config --local user.name "github-actions[bot]"
                   
                   # Commit and push changes
                   git add package.json package-lock.json
@@ -80,7 +81,8 @@ jobs:
                     --generate-notes
                 fi
               env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                GITHUB_TOKEN: ${{ secrets.DEPLOY_KEY }}
+
             - name: Install, build and upload your site
               uses: withastro/action@v3
 
