--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,15 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
+            - name: Install SSH Client
+              uses: webfactory/ssh-agent@v0.9.0
+              with:
+                ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+
             - name: Checkout your repository using git
               uses: actions/checkout@v4
               with:
                 fetch-depth: 0
-                token: ${{ secrets.DEPLOY_KEY }}
 
             - name: Setup Node.js
               uses: actions/setup-node@v4
@@ -80,8 +84,6 @@ jobs:
                     --notes "Release v$CURRENT_VERSION" \
                     --generate-notes
                 fi
-              env:
-                GITHUB_TOKEN: ${{ secrets.DEPLOY_KEY }}
 
             - name: Install, build and upload your site
               uses: withastro/action@v3
