--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -18,12 +18,14 @@ jobs:
             - uses: actions/checkout@v4
               with:
                   fetch-depth: 0
-                  token: ${{ secrets.GH_TOKEN_ACTION }}
+                  fetch-tags: true
+                  persist-credentials: false
+                  token: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Bump version and push tag
               uses: TriPSs/conventional-changelog-action@v6
               with:
-                  github-token: ${{ secrets.GH_TOKEN_ACTION }}
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
                   git-message: 'chore(release): {version}'
                   preset: 'angular'
                   tag-prefix: 'v'
