--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -27,17 +27,15 @@ jobs:
               with:
                   github-token: ${{ secrets.GH_TOKEN_ACTION }}
                   git-message: 'chore(release): {version}'
-                  preset: 'angular'
-                  tag-prefix: 'v'
-                  output-file: 'CHANGELOG.md'
-                  git-user-name: 'Conventional Changelog Action'
-                  git-user-email: 'conventional.changelog.action@github.com'
-                  git-pull-method: '--ff-only'
-                  git-push: 'true'
-                  release-count: '5'
-                  version-file: './package.json'
-                  version-path: 'version'
                   skip-on-empty: 'false'
-                  skip-version-file: 'false'
-                  skip-commit: 'false'
-                  fallback-version: '0.1.0'
+                  output-file: 'false'
+
+            - name: Create Release
+              uses: actions/create-release@v1
+              if: ${{ steps.changelog.outputs.skipped == 'false' }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GH_TOKEN_ACTION }}
+              with:
+                  tag_name: ${{ steps.changelog.outputs.tag }}
+                  release_name: ${{ steps.changelog.outputs.tag }}
+                  body: ${{ steps.changelog.outputs.clean_changelog }}
