Add id to version bump flow

--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -23,6 +23,7 @@ jobs:
                   token: ${{ secrets.GH_TOKEN_ACTION }}
 
             - name: Bump version and push tag
+              id: changelog
               uses: TriPSs/conventional-changelog-action@v6
               with:
                   github-token: ${{ secrets.GH_TOKEN_ACTION }}
