--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -27,9 +27,8 @@ jobs:
 
             # Deploy to gh-pages under `-pr/<branch_name>`
             - name: Deploy to GitHub Pages
-              uses: peaceiris/actions-gh-pages@v3
+              uses: peaceiris/actions-gh-pages@v4
               with:
-                  personal_token: ${{ secrets.GITHUB_TOKEN }}
+                  deploy_key: ${{ secrets.GH_TOKEN_ACTION }}
                   publish_dir: ./dist # Adjust this if your build output is elsewhere
-                  publish_branch: gh-pages
                   destination_dir: -pr/${{ github.head_ref }}
