--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^5.1.8",
+    "astro": "^5.2.3",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.10"
+    "prettier-plugin-tailwindcss": "^0.6.11"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.5",
-    "tailwindcss": "^3.4.17"
+    "@tailwindcss/cli": "^4.0.3",
+    "@tailwindcss/vite": "^4.0.2",
+    "tailwindcss": "^4.0.3"
   }
 }
