--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^6.0.0",
-    "tailwindcss": "^3.0.24"
+    "@tailwindcss/vite": "^4.0.6",
+    "tailwindcss": "^4.0.6"
   }
 }
