--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,47 @@
 name: Deploy to GitHub Pages
 
 on:
-    workflow_run:
-        workflows: ["Bump version"]
-        types:
-            - completed
-        branches: [main]
-    workflow_dispatch:
+  workflow_run:
+    workflows: ['Bump version']
+    types:
+      - completed
+    branches: [main]
+  workflow_dispatch:
 
 permissions:
-    contents: write
-    pages: write
-    id-token: write
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout your repository using git
-              uses: actions/checkout@v4
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout your repository using git
+        uses: actions/checkout@v4
 
-            - name: Install, build and upload your site
-              uses: withastro/action@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22' # Ensure you're using the correct version
+          cache: 'npm'
 
-    deploy:
-        needs: build
-        runs-on: ubuntu-latest
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        steps:
-            - name: Deploy to GitHub Pages
-              id: deployment
-              uses: actions/deploy-pages@v4
+      - name: Remove cache and reinstall dependencies
+        run: rm -rf node_modules package-lock.json && npm ci
+
+      - name: Install Rollup manually (if needed)
+        run: npm install --save-dev rollup
+
+      - name: Install, build and upload your site
+        uses: withastro/action@v3
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
