--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
 
       - name: Install, build and upload your site
         uses: withastro/action@v3
+        with:
+          package-manager: npm
 
   deploy:
     needs: build
