--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,5 @@
   "tabWidth": 2,
   "trailingComma": "es5",
   "printWidth": 80,
-  "plugins": ["prettier-plugin-astro"]
+  "plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"]
 }
